# autoloading

./: readme.md
baffle_node/: package.xml  setup.cfg  setup.py
baffle_node/baffle_node/: baffle_node.py
calibrate_launch/: CMakeLists.txt  package.xml
calibrate_launch/launch/: calibrate.launch.py
calibrate_point_cloud/: CMakeLists.txt  package.xml
calibrate_point_cloud/include/calibrate_point_cloud/: calibrate_point_cloud.h
calibrate_point_cloud/src/: calibrate_point_cloud.cpp  main.cpp
detection_bbox_node/: CMakeLists.txt  package.xml
detection_bbox_node/src/: detection_bbox.cpp
process_cloud_launch/: CMakeLists.txt  package.xml
process_cloud_launch/launch/: process_cloud.launch.py
process_point_cloud/: CMakeLists.txt  package.xml
process_point_cloud/config/: process_node_config.yaml
process_point_cloud/include/process_point_cloud/: process_node.h  utils.h
process_point_cloud/src/: main.cpp  process_node.cpp  snap7.cpp  utils.cpp
python_algorithms/: package.xml  setup.cfg  setup.py
python_algorithms/python_algorithms/: baffle_node.py  carriage_node.py  carriage_node_utils.py  pointnet_part_seg_msg.py
